--- a/config/services.yml
+++ b/config/services.yml
@@ -3,9 +3,14 @@ services:
     public: true
 
   # Register the controller as a service
-  DimSymfony\Controller\ConfigurationController:
+  DimSymfony\Controller\Admin\DimSymfonyGestionRdvController:
     arguments:
-      - '@prestashop.module.dimsymfony.form.configuration_text_form_data_handler'
+      - '@Dimsymfony.service.itinerary_service'
+      - '%dimsymphony.google_api_key%'
+    tags:
+      - { name: 'controller.service_arguments' }
+
+  DimSymfony\Controller\Admin\AdminDimSymfonyConfigController:
     tags:
       - { name: 'controller.service_arguments' }
 
