--- a/config/services.yml
+++ b/config/services.yml
@@ -2,7 +2,7 @@ services:
   _defaults:
     public: true
 
-  # Register the controller as a service
+  # Register the controllers
   DimSymfony\Controller\Admin\DimSymfonyGestionRdvController:
     arguments:
       - '@Dimsymfony.service.itinerary_service'
@@ -11,30 +11,31 @@ services:
       - { name: 'controller.service_arguments' }
 
   DimSymfony\Controller\Admin\AdminDimSymfonyConfigController:
-  arguments:
-    - '@prestashop.module.dimsymfony.form.configuration_text_form_data_handler'
-  tags: ['controller.service_arguments']
-
+    # Now inject the correct service that exists:
+    arguments:
+      - '@prestashop.module.dimsymfony.form.configuration_text_form_data_handler'
+    tags: ['controller.service_arguments']
 
   # Demo configuration text form
   prestashop.module.dimsymfony.form.type.configuration_text:
-    class: 'DimSymfony\Form\ConfigurationFormType'
-    parent: 'form.type.translatable.aware'
+    class: DimSymfony\Form\ConfigurationFormType
+    parent: form.type.translatable.aware
     public: true
     tags:
       - { name: form.type }
 
   prestashop.module.dimsymfony.form.configuration_text_data_configuration:
-    class: 'DimSymfony\Form\ConfigurationTextDataConfiguration'
-    arguments: ['@prestashop.adapter.legacy.configuration']
+    class: DimSymfony\Form\ConfigurationTextDataConfiguration
+    arguments:
+      - '@prestashop.adapter.legacy.configuration'
 
   prestashop.module.dimsymfony.form.configuration_text_form_data_provider:
-    class: 'DimSymfony\Form\ConfigurationTextFormDataProvider'
+    class: DimSymfony\Form\ConfigurationTextFormDataProvider
     arguments:
       - '@prestashop.module.dimsymfony.form.configuration_text_data_configuration'
 
   prestashop.module.dimsymfony.form.configuration_text_form_data_handler:
-    class: 'PrestaShop\PrestaShop\Core\Form\Handler'
+    class: PrestaShop\PrestaShop\Core\Form\Handler
     arguments:
       - '@form.factory'
       - '@prestashop.core.hook.dispatcher'
