--- a/config/routes.yml
+++ b/config/routes.yml
@@ -1,13 +1,13 @@
 admin_dimsymphony_config_index:
   path: /modules/dimsymfony/config
+  controller: 'DimSymfony\Controller\Admin\AdminDimSymfonyConfigController::indexAction'
   defaults:
-    _controller: 'DimSymfony\Controller\Admin\AdminDimSymfonyConfigController::indexAction'
     _legacy_controller: 'AdminModules'
     _legacy_link: 'AdminModules'
 
 admin_dimsymphony_gestionrdv_index:
   path: /modules/dimsymfony/gestionrdv
+  controller: 'DimSymfony\Controller\Admin\DimSymfonyGestionRdvController::indexAction'
   defaults:
-    _controller: 'DimSymfony\Controller\Admin\DimSymfonyGestionRdvController::indexAction'
     _legacy_controller: 'AdminModules'
     _legacy_link: 'AdminModules'
