--- a/config/services.yml
+++ b/config/services.yml
@@ -3,20 +3,21 @@ services:
     public: true
 
   # Register the controllers
-  DimSymfony\Controller\Admin\DimSymfonyGestionRdvController:
+  DimSymfony\Controller\Admin\AdminDimSymfonyGestionRdvController:
     arguments:
       - '@Dimsymfony.service.itinerary_service'
       - '%dimsymphony.google_api_key%'
     tags:
       - { name: 'controller.service_arguments' }
-      - { name: 'admin_module' } # Add this tag
-      
+      - { name: 'admin.controller' } # Corrected tag
 
   DimSymfony\Controller\Admin\AdminDimSymfonyConfigController:
     # Now inject the correct service that exists:
     arguments:
       - '@prestashop.module.dimsymfony.form.configuration_text_form_data_handler'
-    tags: ['controller.service_arguments', 'admin_module']
+    tags:
+      - { name: 'controller.service_arguments' }
+      - { name: 'admin.controller' } # Corrected tag
 
   # Demo configuration text form
   prestashop.module.dimsymfony.form.type.configuration_text:
