--- a/config/routes.yml
+++ b/config/routes.yml
@@ -1,7 +1,9 @@
 admin_dimsymphony_config_index:
   path: /modules/dimsymfony/config
   controller: 'DimSymfony\Controller\Admin\AdminDimSymfonyConfigController::indexAction'
+  methods: [GET, POST]
 
 admin_dimsymphony_gestionrdv_index:
   path: /modules/dimsymfony/gestionrdv
   controller: 'DimSymfony\Controller\Admin\DimSymfonyGestionRdvController::indexAction'
+  methods: [GET, POST]
